# unlearning-sql

./: .gitignore  LICENSE  Makefile  README.md  README.rst  activation_load.csv  activation_source.data  activation_source.schema  activation_source.schema.json  database.uml  fake_data.py  pyproject.toml  python_extract_2.py  python_extract_process.py  python_load_process.py  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  service_name_counts.csv  sql_db_preparation.py  sql_extract_process.py  sql_load_process.py  template.py  template_config.toml  test_python_load.py  unlearning_sql.db
data/: activation_source.csv  service_name_counts.csv  unlearning_sql.db
docs/: Makefile  from_where_select.tikz  from_where_select.uml  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc  presentation.vrb
docs/_minted-presentation/: 1CCB53B95E5087E91685F3EA9D20FCE6AA4D79267A28B20900D242C8F0BD8FAB.pygtex  231248721AAC9B5D68B39EF776B0B5A4AA4D79267A28B20900D242C8F0BD8FAB.pygtex  4AA485EC517AE55F0EA13852E49A2926AA4D79267A28B20900D242C8F0BD8FAB.pygtex  (+8 more)
features/: environment.py  load_process.feature
src/: efficiencies.py  fake_data.py  fake_data_hard.py  functional_sql.py  pydantic_load_process.py  python_extract_1.py  python_extract_2.py  python_load_process.py  sql_db_preparation.py  sql_extract_process.py  sql_load_process.py  synthetic_data.py  template.py
tests/: activation_load.csv  test_efficiencies.py  test_pydantic_load.py  test_python_extract_1.py  test_python_load.py  test_sql_extract.py  test_sql_load.py
(+19 files in other folders)
